# ghrel

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  SPEC.md  TODO.md  justfile  pyproject.toml
src/ghrel/: __init__.py  __main__.py  archive.py  cli.py  errors.py  github.py  install.py  packages.py  platform.py  state.py
tests/: test_archive.py  test_cli.py  test_install.py  test_packages.py  test_state.py
